--- a/ActivityPubServer/Views/Account/Login.cshtml
+++ b/ActivityPubServer/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-@model ActivityPubServer.Model.OAuth.LoginViewModel
+@model LoginViewModel
 <form autocomplete="off" asp-route="Login">
     <input type="hidden" asp-for="ReturnUrl"/>
     <div class="card">
