--- a/ActivityPubServer/Views/Shared/_Layout.cshtml
+++ b/ActivityPubServer/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
 
-    <title>OpenIddict - Authorization Server</title>
+    <title>Fedido</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css"/>
@@ -14,9 +14,7 @@
 <div class="container-sm mt-3">
     <div class="row mb-3">
         <div class="col text-center">
-            <h1>
-                Authorization Server
-            </h1>
+            <h1>Fedido Server</h1>
         </div>
     </div>
     <div class="row">
